src/objects/Competitor_Fleet_Models__c.object
<CustomObject>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Fleet Models</relationshipLabel>
        <relationshipName>Competitor_Fleet_Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Category__c</fullName>
        <label>Price Category</label>
        <picklist>
            <picklistValues>
                <fullName>Light &lt; $25K</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Passenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Competitor Fleet Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Competitor__c</columns>
        <columns>Model__c</columns>
        <columns>Price_Category__c</columns>
        <columns>Vehicle_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFN-{0000}</displayFormat>
        <label>Competitor Fleet Models Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Fleet Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>